--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.13.0
-  cloud_firestore: ^5.6.7
+  firebase_core: ^3.15.2
+  cloud_firestore: ^5.6.12
   firebase_auth: ^5.5.4
   modal_progress_hud_nsn: ^0.5.1
   flutter_chat_bubble: ^2.0.2
+  flutter_riverpod: ^3.0.3
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,7 @@ flutter:
     - image/sky3.jpg
     - image/sky.jpg
     - image/sky2.jpg
+    - image/cleaning.webp
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
