--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,18 @@ dependencies:
   firebase_core: ^3.15.2
   cloud_firestore: ^5.6.12
   firebase_auth: ^5.5.4
+  firebase_storage: ^12.3.8
+  image_picker: ^1.1.2
+  intl: ^0.19.0
   modal_progress_hud_nsn: ^0.5.1
   flutter_chat_bubble: ^2.0.2
   flutter_riverpod: ^3.0.3
+  kpostal: ^1.1.0
+  geocoding: ^3.0.0
+  geolocator: ^14.0.2
+  tosspayments_widget_sdk_flutter: ^2.1.2
+  webview_flutter: ^4.4.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
