--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,7 +41,7 @@ dependencies:
   firebase_auth: ^5.5.4
   firebase_storage: ^12.3.8
   image_picker: ^1.1.2
-  intl: ^0.19.0
+  intl: ^0.20.2
   modal_progress_hud_nsn: ^0.5.1
   flutter_chat_bubble: ^2.0.2
   flutter_riverpod: ^3.0.3
