--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,6 +49,10 @@
 	<string>사진을 업로드하기 위해 갤러리 접근 권한이 필요합니다.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>사진을 촬영하기 위해 카메라 접근 권한이 필요합니다.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>사용자의 위치를 기반으로 가까운 청소 의뢰 및 전문가를 찾기 위해 위치 권한이 필요합니다.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>사용자의 위치를 기반으로 가까운 청소 의뢰 및 전문가를 찾기 위해 위치 권한이 필요합니다.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 </dict>
