--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   google_sign_in: ^6.2.1
   sign_in_with_apple: ^7.0.1
   flutter_rating_bar: ^4.0.1
+  cached_network_image: ^3.4.1
+  google_mobile_ads: ^6.0.0
 
 dev_dependencies:
   flutter_test:
