--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,38 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"cleanhai20092213","appId":"1:1081263043947:android:56e568c9f871090287482e","fileOutput":"android/app/google-services.json"}},"ios":{"default":{"projectId":"cleanhai20092213","appId":"1:1081263043947:ios:6c81c03fec12d74387482e","uploadDebugSymbols":false,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"dart":{"lib/firebase_options.dart":{"projectId":"cleanhai20092213","configurations":{"android":"1:1081263043947:android:56e568c9f871090287482e","ios":"1:1081263043947:ios:6c81c03fec12d74387482e"}}}}}}
+{
+    "functions": {
+        "source": "functions",
+        "required": [
+            [
+                "functions"
+            ]
+        ]
+    },
+    "flutter": {
+        "platforms": {
+            "android": {
+                "default": {
+                    "projectId": "cleanhai20092213",
+                    "appId": "1:1081263043947:android:56e568c9f871090287482e",
+                    "fileOutput": "android/app/google-services.json"
+                }
+            },
+            "ios": {
+                "default": {
+                    "projectId": "cleanhai20092213",
+                    "appId": "1:1081263043947:ios:6c81c03fec12d74387482e",
+                    "uploadDebugSymbols": false,
+                    "fileOutput": "ios/Runner/GoogleService-Info.plist"
+                }
+            },
+            "dart": {
+                "lib/firebase_options.dart": {
+                    "projectId": "cleanhai20092213",
+                    "configurations": {
+                        "android": "1:1081263043947:android:56e568c9f871090287482e",
+                        "ios": "1:1081263043947:ios:6c81c03fec12d74387482e"
+                    }
+                }
+            }
+        }
+    }
+}
