--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^5.6.12
   firebase_auth: ^5.5.4
   firebase_storage: ^12.3.8
+  cloud_functions: ^5.2.1
   image_picker: ^1.1.2
   intl: ^0.20.2
   modal_progress_hud_nsn: ^0.5.1
@@ -53,10 +54,13 @@ dependencies:
   get: ^4.7.3
   geocoding_platform_interface: ^3.2.0
   google_sign_in: ^6.2.1
-  sign_in_with_apple: ^7.0.1
   flutter_rating_bar: ^4.0.1
   cached_network_image: ^3.4.1
   google_mobile_ads: ^6.0.0
+  tosspayments_widget_sdk_flutter: ^2.1.2
+  kakao_flutter_sdk: ^1.10.0
+  sign_in_with_apple: ^7.0.1
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
