--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>1081263043947-6mbk3c1a7q3srpe9t4rf90vp0godg8tn.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.1081263043947-6mbk3c1a7q3srpe9t4rf90vp0godg8tn</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>1081263043947-ilh4ogvkjd4bq8a1nf8d4lk1k7dmm5cb.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyAVLIo3IGilj8ap3L5xj-cNF0b6J1cQTS0</string>
 	<key>GCM_SENDER_ID</key>
@@ -9,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.cleanhai2</string>
+	<string>com.gongsunginternational.cleanhai</string>
 	<key>PROJECT_ID</key>
 	<string>cleanhai20092213</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1081263043947:ios:6c81c03fec12d74387482e</string>
+	<string>1:1081263043947:ios:85af9dab9ce17abd87482e</string>
 </dict>
 </plist>
