--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,9 @@
             ]
         ]
     },
+    "firestore": {
+        "rules": "firestore.rules"
+    },
     "flutter": {
         "platforms": {
             "android": {
